# course-take-your-first-steps-with-rust

./: Cargo.toml  README.md
section-01-what-is-rust/: what-is-rust.md
section-03-create-your-first-rust-program/car/src/: main.rs
section-04-test-conditions-with-if-else-expressions-in-rust/car/src/: main.rs
section-05-use-loops-to-iterate-through-data-in-rust/exercise-01-use-a-hash-map-to-track-orders/track-orders/src/: main.rs
section-05-use-loops-to-iterate-through-data-in-rust/exercise-05-01-use-a-hash-map-to-track-orders/track-orders/: Cargo.toml
section-05-use-loops-to-iterate-through-data-in-rust/exercise-05-02-use-a-loop-to-iterate-on-data/iterate-on-data/: Cargo.toml
section-08-implement-generic-types-and-traits/section-08-01-introduction/: section-08-01-introduction.md
section-08-implement-generic-types-and-traits/section-08-07-exercise-implement-an-iterator/items/: Cargo.toml
section-09-explore-modules-packages-and-third-party-crates/section-09-01-introduction/: introduction.md
section-09-explore-modules-packages-and-third-party-crates/unit-06-exercise-visibility/: Cargo.toml
section-09-explore-modules-packages-and-third-party-crates/unit-06-exercise-visibility/src/: main.rs
section-09-explore-modules-packages-and-third-party-crates/unit-07-exercise-modules/: Cargo.toml
section-10/unit-01/: write-automated-tests.md
section-10/unit-03/exercise-write-unit-tests/: Cargo.toml
section-10/unit-05/exercise-write-documentation-tests/: Cargo.toml
section-10/unit-05/exercise_write_documentation_tests/: Cargo.toml
(+7 files in other folders)
